--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <script src="https://unpkg.com/kaboom@next/dist/kaboom.js"></script>
+    <script src="maps.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
